cc_library(
        name = "square",
        srcs = [
                "square.cpp",
        ],
        hdrs = [
                "square.h",
        ],
        visibility = [
                "//visibility:public",
        ],
)

cc_test(
        name = "square_test",
        srcs = [
                "square_test.cpp",
        ],
        deps = [
                "//sandbox/bazel-example/lib/math:square",
                "@googletest//:gtest_main",
        ],
)

